# lazarus-mcp

./: .gitignore  Cargo.toml  Makefile  README.md  build.rs  peaceful-snacking-grove.md
examples/: test_mcp_read.rs
hooks/: Cargo.toml  build.rs
hooks/src/: lib.rs
src/: main.rs  mcp_server.rs  privileges.rs  process.rs  proxy.rs  restart.rs  tools.rs  watchdog.rs  wrapper.rs
src/netmon/: mod.rs  netns.rs
src/pool/: agent.rs  locks.rs  mod.rs  task.rs
src/tui/: app.rs  events.rs  mod.rs  ui.rs
