[package]
name = "aegis-mcp"
version = "0.3.0"
edition = "2021"
description = "Universal agent supervisor with hot-reload support for MCP servers"
license = "MIT"

[dependencies]
# JSON-RPC / MCP message handling
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
anyhow = "1"

# Utilities
which = "7"
dirs = "6"
ctrlc = "3"

# Async runtime for agent pool
tokio = { version = "1", features = ["full"] }

# UUID for agent IDs
uuid = { version = "1", features = ["v4"] }

# Unix process control
[target.'cfg(unix)'.dependencies]
nix = { version = "0.29", features = ["process", "signal", "user"] }

[profile.release]
lto = true
strip = true

[workspace]
members = ["hooks"]

[dev-dependencies]
tempfile = "3.24.0"
