[package]
name = "aegis-mcp"
version = "0.3.0"
edition = "2021"
description = "Universal agent supervisor with hot-reload support for MCP servers"
license = "MIT"

[dependencies]
# JSON-RPC / MCP message handling
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
anyhow = "1"

# Utilities
which = "7"
dirs = "6"
ctrlc = "3"
signal-hook = "0.3"
humantime = "2"

# Async runtime for agent pool
tokio = { version = "1", features = ["full"] }

# UUID for agent IDs
uuid = { version = "1", features = ["v4"] }

# Process monitoring
sysinfo = "0.38"

# TUI
ratatui = "0.30"
ratatui-interact = "0.3"
crossterm = "0.29"
tui-input = "0.15"

# Unix process control
[target.'cfg(unix)'.dependencies]
nix = { version = "0.29", features = ["process", "signal", "user"] }
libc = "0.2"

[profile.release]
lto = true
strip = true

[build-dependencies]
chrono = "0.4"

[dev-dependencies]
tempfile = "3.24.0"
