[package]
name = "aegis-hooks"
version = "0.1.0"
edition = "2021"
description = "LD_PRELOAD library for network monitoring and filesystem overlay"
license = "MIT"

[lib]
crate-type = ["cdylib"]

[dependencies]
libc = "0.2"
once_cell = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
